locust/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: locustio/locust:latest
        ports:
        - containerPort: 8089
        volumeMounts:
        - name: locust-script
          mountPath: /mnt/locust
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
      volumes:
      - name: locust-script
        configMap:
          name: locust-script
