locust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: locust
spec:
  selector:
    app: locust
  ports:
    - name: web-ui
      port: 8089
      targetPort: 8089
      protocol: TCP
