locust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  namespace: locust
spec:
  ingressClassName: traefik
  rules:
    - host: locust.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust
                port:
                  number: 8089
